# str_sorter

./: .clang-format  .gitignore  CMakeLists.txt  README.md  design.md  main.cpp  test.cpp
client/: simple_client.cpp  simple_client.hpp  str_client.cpp  str_client.hpp
ipc/: client.hpp  common.hpp  ipc.cpp  ipc.hpp  ipc_client_socket.hpp  ipc_server.hpp  ipc_server_socket.cpp  ipc_server_socket.hpp  server.hpp  socket_client.cpp  socket_client.hpp  socket_common.cpp  socket_common.hpp  socket_server.cpp  socket_server.hpp  test.cpp
ipc/socket/: socket_client.cpp  socket_client.hpp  socket_common.cpp  socket_common.hpp  socket_server.cpp  socket_server.hpp
ipc/socket/test/: test.cpp
server/: connections_handler.cpp  connections_handler.hpp  data_handler.cpp  data_handler.hpp  requests_handler.cpp  requests_handler.hpp  sort_server.cpp  sort_server.hpp
server/db/: data_handler.cpp  data_handler.hpp
utility/: macros.hpp  simple_logger.hpp
